--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             <br>
            
             <div class="cta-buttons">
-                <button class="btn btn-primary">Sign Up</button>
-                <button class="btn btn-secondary">Log In</button>
+                <button class="btn btn-primary">Connect Wallet</button>
+                
             </div>
         </section>
 
