--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 <body>
     <header>
         <nav>
-            <div class="logo">Ecocommute</div>
+            <div class="logo">EcoCommute</div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
-                <li><a href="#features">Features</a></li>
-                <li><a href="#dashboard">Dashboard</a></li>
-                <li><a href="#rewards">Rewards</a></li>
-                <li><a href="#community">Community</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#blog">Blog</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="burger">
                 <div class="line1"></div>
@@ -49,7 +49,7 @@
 
     <main>
         <section id="home" class="hero">
-            <h1>Welcome to Ecocommute</h1>
+            <h1>Welcome to EcoCommute</h1>
             <p>Join us in making eco-friendly transportation choices for a greener future!</p>
             
             <div class="hero-image">
@@ -62,102 +62,59 @@
             </div>
         </section>
 
-        <section id="features">
-            <h2>Why Choose Ecocommute?</h2>
-            <div class="feature-grid">
-                <div class="feature-card">
+        <section id="services">
+            <h2>Our Services</h2>
+            <div class="service-grid">
+                <div class="service-card">
                     <i class="fas fa-route"></i>
                     <h3>Smart Trip Planning</h3>
                     <p>Optimize your routes for eco-friendly travel options.</p>
                 </div>
-                <div class="feature-card">
+                <div class="service-card">
                     <i class="fas fa-leaf"></i>
-                    <h3>Reduce Carbon Footprint</h3>
+                    <h3>Carbon Footprint Tracking</h3>
                     <p>Track and minimize your environmental impact.</p>
                 </div>
-                <div class="feature-card">
+                <div class="service-card">
                     <i class="fas fa-gift"></i>
-                    <h3>Earn Rewards</h3>
-                    <p>Get incentives for making sustainable choices.</p>
-                </div>
-                <div class="feature-card">
-                    <i class="fas fa-users"></i>
-                    <h3>Join a Community</h3>
-                    <p>Connect with eco-conscious commuters.</p>
+                    <h3>Rewards Program</h3>
+                    <p>Earn rewards for sustainable choices.</p>
                 </div>
             </div>
         </section>
 
-        <section id="dashboard">
-            <h2>Your Ecocommute Dashboard</h2>
-            <div class="dashboard-grid">
-                <div class="profile-card">
-                    <h3>Profile</h3>
-                    <div class="profile-info">
-                        <img src="2.png" alt="User Avatar" class="profile-avatar">
-                        <div>
-                            <p><b>Name: </b><span id="user-name">John Doe</span></p>
-                            <p><b>Total Eco-trips:</b> <span id="eco-trips">15</span></p>
-                            <p><b>Carbon Saved:</b> <span id="carbon-saved">75 kg</span></p>
-                        </div>
-                    </div>
-                    <div class="profile-stats">
-                        <div class="stat">
-                            <span class="stat-value"><b>5</b></span>
-                            <span class="stat-label">Badges</span>
-                        </div>
-                        <div class="stat">
-                            <span class="stat-value"><b>1500</b></span>
-                            <span class="stat-label">Points</span>
-                        </div>
-                    </div>
+        <section id="about">
+            <h2>About Us</h2>
+            <p>EcoCommute is dedicated to promoting sustainable transportation solutions. Our mission is to reduce carbon emissions and encourage eco-friendly travel.</p>
+        </section>
+
+        <section id="blog">
+            <h2>Latest Blog Posts</h2>
+            <div class="blog-grid">
+                <div class="blog-post">
+                    <h3>5 Tips for Eco-Friendly Commuting</h3>
+                    <p>Discover how you can make your daily commute more sustainable.</p>
                 </div>
-                <div class="trip-planner">
-                    <h3>Plan Your Trip</h3>
-                    <form id="trip-form">
-                        <input type="text" id="start-point" placeholder="Start Point" required>
-                        <input type="text" id="end-point" placeholder="End Point" required>
-                        <select id="travel-mode">
-                            <option value="bike">Bike</option>
-                            <option value="walk">Walk</option>
-                            <option value="bus">Bus</option>
-                            <option value="train">Train</option>
-                            <option value="car">Car (Carpool)</option>
-                        </select>
-                        <button type="submit" class="btn btn-primary">Plan Trip</button>
-                    </form>
+                <div class="blog-post">
+                    <h3>The Future of Green Transportation</h3>
+                    <p>Explore the latest trends in eco-friendly travel.</p>
                 </div>
-                <div id="map-container">
-                    <iframe src="https://storage.googleapis.com/maps-solutions-cwmd7xupin/commutes/9mcp/commutes.html"
-                        width="250%" height="100%"
-                        style="border:0;"
-                        loading="lazy">
-                    </iframe>
-                </div>
-                <div id="trip-suggestions"></div>
             </div>
         </section>
 
-        <section id="rewards">
-            <h2>Rewards Center</h2>
-            <div id="user-points">
-                <h3>Your Points: <span>1500</span></h3>
-            </div>
-            <div id="rewards-catalog" class="rewards-grid"></div>
-        </section>
-
-        <section id="community">
-            <h2>Community Forum</h2>
-            <div id="forum-posts"></div>
-            <form id="post-form">
-                <textarea id="post-content" placeholder="Share your eco-commute experience..."></textarea>
-                <button type="submit" class="btn btn-primary">Post</button>
+        <section id="contact">
+            <h2>Contact Us</h2>
+            <form id="contact-form">
+                <input type="text" placeholder="Your Name" required>
+                <input type="email" placeholder="Your Email" required>
+                <textarea placeholder="Your Message" required></textarea>
+                <button type="submit" class="btn btn-primary">Send Message</button>
             </form>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Ecocommute. All rights reserved.</p>
+        <p>&copy; 2024 EcoCommute. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
